[package]
name = "behaviortree-rs"
description = "Rust implementation of BehaviorTree.CPP, a robust behavior tree library in C++"
version = "0.2.5-alpha3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude = ["examples/**"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
behaviortree-rs-derive = { path = "../behaviortree-rs-derive" }
# behaviortree-rs-derive = "0.2.5-alpha3"
evalexpr = "12.0.1"
futures = { version = "0.3.28" }
log = "0.4.20"
parking_lot = "0.12.3"
quick-xml = { version = "0.30.0", features = ["serde", "serialize"] }
thiserror = "1.0.47"

[dev-dependencies]
pretty_env_logger = "0.5.0"
rand = "0.8"
rstest = "0.23.0"
tokio = { version = "1.32.0", features = ["macros"] }
tokio-test = "0.4.3"
